--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-svg": "^13.7.0",
-    "react-navigation-stack": "^2.10.4"
+    "react-native-table-component": "^1.2.2",
+    "react-navigation-stack": "^2.10.4",
+    "segmented-control-rn": "^0.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
