--- a/package.json
+++ b/package.json
@@ -12,10 +12,17 @@
   "dependencies": {
     "@react-native-community/cli-hermes": "^10.1.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^17.0.0",
+    "@react-native-firebase/auth": "^17.0.0",
+    "@react-native-google-signin/google-signin": "^9.0.2",
     "@react-navigation/native": "^6.1.2",
+    "@react-navigation/native-stack": "^6.9.8",
     "@react-navigation/stack": "^6.3.11",
+    "lottie-react-native": "^5.1.5",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-dropdown-picker": "^5.4.4",
+    "react-native-element-dropdown": "^2.5.3",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
