--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-element-dropdown": "^2.5.3",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
