--- a/package.json
+++ b/package.json
@@ -18,18 +18,25 @@
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "@react-navigation/stack": "^6.3.11",
+    "axios": "^1.4.0",
+    "create-react-class": "^15.7.0",
+    "deprecated-react-native-prop-types": "^4.1.0",
+    "jetifier": "^2.0.0",
     "lottie-react-native": "^5.1.5",
+    "native-base": "^3.4.28",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-element-dropdown": "^2.5.3",
-    "react-native-gesture-handler": "^2.8.0",
+    "react-native-gesture-handler": "^2.10.2",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-svg": "^13.7.0",
     "react-native-table-component": "^1.2.2",
+    "react-native-vector-icons": "^9.2.0",
     "react-navigation-stack": "^2.10.4",
     "segmented-control-rn": "^0.4.0"
   },
